# civitai-archive

./: .gitignore  CHANGELOG.md  DOCKER.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  install_web.py  pyproject.toml  pytest.ini  requirements.txt  start_web.py
civitai_manager/: __init__.py  main.py  web_app.py
civitai_manager/src/core/: batch_processor.py  file_processor.py  metadata_manager.py
civitai_manager/src/utils/: config.py  disk_utils.py  file_tracker.py  process_manager.py  security.py  string_utils.py  web_helpers.py
civitai_manager/src/utils/html_generators/: browser_page.py  model_page.py
civitai_manager/templates/: base.html  config.html  dashboard.html  model_detail.html  settings.html  upload.html
helm/civitai-manager/: Chart.yaml  values.yaml
helm/civitai-manager/templates/: deployment.yaml
tests/: conftest.py  requirements.txt  test_core_metadata_manager.py  test_performance.py  test_security.py  test_utils.py  test_web_app.py
