[project]
name = "civitai-data-manager"
version = "1.6.5"
description = "A lightweight tool to locally manage, back up, and organize SafeTensors model metadata from Civitai."
authors = [
    {name = "Jeremy",email = "185207395+jeremysltn@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "flask (>=3.0.0,<4.0.0)",
    "werkzeug (>=3.0.0,<4.0.0)",
    "flask-wtf (>=1.2.0,<2.0.0)",
    "wtforms (>=3.1.0,<4.0.0)"
]

[tool.poetry]
package-mode = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
